--- a/css/resume.css
+++ b/css/resume.css
@@ -9,4 +9,31 @@ textarea {
 html {
   font-size: 1em;
   line-height: 1.4;
+  background-color: #777; /* fond de page sombre */
+}
+
+/* Conteneur principal */
+#wrapper {
+  max-width: 900px;
+  min-width: 320px;
+  margin: 0 auto; /* centre horizontalement */
+  background-color: #fff; /* pour contraster avec le fond sombre */
+  padding: 20px;
+}
+
+header {
+  position: relative;
+  padding: 20px;
+  background-color: #f9f9f9;
+}
+
+header img {
+  float: right;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  width: 150px;
+  height: auto;
+  margin-left: 20px;
 }
